--- a/Paper/PosterPaper-Evaluating GraphCololoring.tex
+++ b/Paper/PosterPaper-Evaluating GraphCololoring.tex
@@ -65,7 +65,7 @@
 \maketitle
 
 \begin{abstract}
-This paper evaluates features of graph coloring algorithms implemented on graphics processing units (GPUs), comparing coloring heuristics and thread decompositions.  As compared to prior work on graph coloring for other parallel architectures, we find that the large number of cores and relatively high global memory bandwidth of a GPU lead to different strategies for the parallel implementation.  Specifically, we find that a simple uniform block partitioning is very effective on GPUs and our parallel coloring heuristics lead to the same or fewer colors than prior approaches for distributed-memory cluster architecture. Our algorithm resolves many coloring conflicts across partitioned blocks on the GPU by iterating through the coloring process, before returning to the CPU to resolve remaining conflicts. With this approach we get as few color (if not fewer) than the best sequential graph coloring algorithm and performance is close to the fastest sequential graph coloring algorithms which had poor color quality.
+This paper evaluates features of graph coloring algorithms implemented on graphics processing units (GPUs), comparing coloring heuristics and thread decompositions.  As compared to prior work on graph coloring for other parallel architectures, we find that the large number of cores and relatively high global memory bandwidth of a GPU lead to different strategies for the parallel implementation.  Specifically, we find that a simple uniform block partitioning is very effective on GPUs and our parallel coloring heuristics lead to the same or fewer colors than prior approaches for distributed-memory cluster architecture. Our algorithm resolves many coloring conflicts across partitioned blocks on the GPU by iterating through the coloring process, before returning to the CPU to resolve remaining conflicts. With this approach we get as few color (if not fewer) than the best sequential graph coloring algorithm and performance is close to the fastest sequential graph coloring algorithms which have poor color quality.
 
 
 %Overall, parallel graph coloring speeds up well for the sparse graphs we studied, commonly yielding speedups above 1000X over a baseline CPU implementation.
@@ -83,7 +83,7 @@ Graph coloring, Parallel algorithm, GPU, CUDA
 
 Graph coloring refers to the assignment of labels or colors to elements of a graph (vertices or edges) subject to certain constraints. In this paper, we consider the specific problem of assigning colors to vertices so that no two neighboring vertices (vertices connected by an edge) have the same color. There are several known applications of graph coloring like assigning frequencies to wireless access points, time-tabling and scheduling, register allocation and printed circuit testing among others.
 
-Graph coloring is NP-hard, and even computing a $n^{1-\epsilon}$-approximation of the chromatic number of a graph is NP-hard \cite{zuckerman07}. Therefore, a number of heuristics have been developed to assign colors to vertices; some commonly used heuristics include First Fit, Largest Degree Order and Saturation Degree Order\cite{al2006new}.  These heuristics tend to trade off minimizing the number of colors and minimizing execution time but generally the faster algorithms have poor coloring quality while the slow ones tend to yield fewer colors. Combinations of these algorithms have also been used to create better heuristics like the combined SDO $\&$ LDO \cite{al2006new}.
+Graph coloring is NP-hard, and even computing a $n^{1-\epsilon}$-approximation of the chromatic number of a graph is NP-hard \cite{zuckerman07}. Therefore, a number of heuristics have been developed to assign colors to vertices; some commonly used heuristics include First Fit(FF), Largest Degree Order (LDO) and Saturation Degree Order (SDO) \cite{al2006new}.  These heuristics tend to trade off minimizing the number of colors and minimizing execution time but generally the faster algorithms have poor coloring quality while the slow ones tend to yield fewer colors. Combinations of these algorithms have also been used to create better heuristics like the combined SDO $\&$ LDO \cite{al2006new}.
 
 This paper examines a graphics processing unit (GPU) mapping of parallel graph coloring.  Prior parallel graph coloring algorithms have been evaluated on conventional shared-memory multiprocessors \cite{gebremedhin2000scalable} or distributed systems \cite{bozdag2008a} but to the best of our knowledge, this is the first study of how GPU architectures affect performance gains and number of assigned colors in a parallel implementation.  Our study demonstrates that features of the GPU architecture significantly impact the algorithms selected. Specifically, the support for efficient fine-grain multithreading facilitates strong performance gains over CPU implementations. Because hundreds or even thousands of threads can be applied to the parallel coloring, we can obtain as few colors as the best sequential algorithm while operating nearly as fast as the fastest sequential algorithms. 
 
@@ -179,7 +179,7 @@ GPUs have different architectures compared to parallel computers where most of t
 
 \begin{figure*}[t]
   \centering
-  \includegraphics[scale=0.28]{figures/newPlot.png}
+  \includegraphics[scale=0.299]{figures/newPlot.png}
   \caption{ First row: Average Colors vs Threads (Subgraph size) - Second row: Value below each bar shows the best average color and their matching time is indicated on the y-axis.}
   \label{fig:results}
 \end{figure*}
@@ -187,7 +187,7 @@ GPUs have different architectures compared to parallel computers where most of t
 
 \section{Algorithm}
 
-In this paper, we propose a framework based on the \gm algorithm \cite{gebremedhin2000scalable}, which is adapted for an NVIDIA GPU platform.  In addition, two new heuristics are proposed to match the parallelism exploited by the GPU, which are shown to give better coloring quality than FF and  the same or better quality as SDO with the running time that is comparable to FF. 
+In this paper, we propose a framework based on the \gm algorithm \cite{gebremedhin2000scalable}, which is adapted for an NVIDIA GPU platform.  In addition, two new heuristics are proposed to match the parallelism exploited by the GPU, which are shown to give better coloring quality than FF and the same or better quality as SDO with the running time that is comparable to FF the latter two running on the CPU. 
 
 \subsection{The Graph Coloring Framework}
 
@@ -217,7 +217,7 @@ In this paper, we propose a framework based on the \gm algorithm \cite{gebremedh
 
 
 \textbf{Phase 1: Graph Partitioning:}
-The graph is initially padded with empty nodes so that it is exactly divisible by the total number of threads. Each thread equally takes $N/p$ vertices, which is a load-balanced approach.\\
+The graph is initially padded with empty nodes so that it is exactly divisible by the total number of threads (p). Each thread equally takes $n/p$ vertices, which is a load-balanced approach.\\
 
 %\textbf{Boundary Nodes:}\
 %When a graph is divided into subgraphs, some of the vertices found in a subgraph have connected neighbors only in the same subgraph while others have neighbors outside.The former are referred as interior nodes and the latter are boundary nodes.Within a subgraph, the coloring procedure is conducted in sequence, so interior nodes are not likely to have color conflicts. However,since all subgraphs are colored in parallel without inter-thread communication, the boundary nodes are likely to be assigned with illegal colors conflicting with their neighbors residing in different subgraphs.  
@@ -462,7 +462,7 @@ In terms of speed among the parallel graph coloring algorithms, First Fit is the
 
 \section{Conclusion}
 
-The proposed GPU implementation provides much better coloring quality in terms of number of colors used, and the running time is comparable to FF (known as the fastest sequential coloring algorithm). In many cases, it can even beat the sequential SDO $\&$ LDO which is reported to use smallest number of colors as well as colors reported in \cite{bozdag2008a}.
+The proposed GPU implementation provides much better coloring quality in terms of number of colors used, and the running time is comparable to sequential FF (known as the fastest sequential coloring algorithm). In many cases, it can even beat the sequential SDO $\&$ LDO which is reported to use smallest number of colors as well as colors reported in \cite{bozdag2008a}.
 
 
 %\appendix
